Untested. Nearly there..
TODO:
-- Make the game into a compelling single-user experience (with AI / "The Cards")
-- Add multi-player elements based on anon session ID for scoring etc.
-- Logically differentiate between the two (branch based on config)

-- Add Angular front-end

--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,11 @@
 TODO
 
-done /questions/ask -> Add POST input to a database
-/questions/get -> Get a question from the database. By default, get a random question.
+BUGS: 
+-Either answers dont save to the right question, or the session flash message gets given the wrong question
+-Answer counting function is broken, users never get asked to moderate
+-Write POST endpoint for answer moderation then redirect to /questions/ask(.new)
 
-Add output of Question->Ask into homepage.jade text form
-
-Style the homepage.
+TODO:
+Then -Add .json responses
+-Make Angular load into the browser
+-Rewrite front-end for angular
